--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,22 @@
 # SonarQube project configuration
-sonar.projectKey=python-demo-project
-sonar.projectName=Python Demo Project for SonarQube
-sonar.projectVersion=1.0
+sonar.projectKey=shantanu10839179_devsecopsdashboard
+sonar.organization=shantanu10839179
+
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=devsecopsdashboard
+#sonar.projectVersion=1.0
+
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
+
+# sonar.projectKey=python-demo-project
+# sonar.projectName=Python Demo Project for SonarQube
+# sonar.projectVersion=1.0
 
 # Source code settings
 sonar.sources=.
