--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,28 +18,28 @@ sonar.organization=shantanu10839179
 # sonar.projectName=Python Demo Project for SonarQube
 # sonar.projectVersion=1.0
 
-# Source code settings
-sonar.sources=.
-sonar.inclusions=**/*.py
-sonar.exclusions=**/test_*.py,**/__pycache__/**,**/venv/**,**/env/**
+# # Source code settings
+# sonar.sources=.
+# sonar.inclusions=**/*.py
+# sonar.exclusions=**/test_*.py,**/__pycache__/**,**/venv/**,**/env/**
 
-# Test settings
-sonar.tests=.
-sonar.test.inclusions=**/test_*.py
-sonar.test.exclusions=**/__pycache__/**
+# # Test settings
+# sonar.tests=.
+# sonar.test.inclusions=**/test_*.py
+# sonar.test.exclusions=**/__pycache__/**
 
-# Python specific settings
-sonar.python.coverage.reportPaths=coverage.xml
-sonar.python.xunit.reportPath=test-results.xml
+# # Python specific settings
+# sonar.python.coverage.reportPaths=coverage.xml
+# sonar.python.xunit.reportPath=test-results.xml
 
-# Code analysis settings
-sonar.sourceEncoding=UTF-8
+# # Code analysis settings
+# sonar.sourceEncoding=UTF-8
 
-# Quality gate settings
-sonar.qualitygate.wait=true
+# # Quality gate settings
+# sonar.qualitygate.wait=true
 
-# Coverage settings
-sonar.coverage.jacoco.xmlReportPaths=coverage.xml
+# # Coverage settings
+# sonar.coverage.jacoco.xmlReportPaths=coverage.xml
 
-# Duplication settings
-sonar.cpd.python.minimumTokens=50
+# # Duplication settings
+# sonar.cpd.python.minimumTokens=50
