Comment out force failure step in failure-test.yml
Comment out the force failure step in the workflow.

--- a/.github/workflows/failure-test.yml
+++ b/.github/workflows/failure-test.yml
@@ -11,9 +11,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 1. Force Failure
-      - name: Force Failure
-        run: exit 1
+      # # 1. Force Failure
+      # - name: Force Failure
+      #   run: exit 1
 
       # 2. Syntax Error in Python
       - name: Run Python with Syntax Error
